--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,5 @@ STRIPE_CANCEL_URL=http://localhost:3000/payments/cancel,
 # https://dashboard.stripe.com/test/workbench/webhooks/we_1R5CqlA4hAySI64ST1t6VfzX
 # This is the webhook signing secret
 STRIPE_ENDPOINT_SECRET=
+
+NATS_SERVERS="nats://localhost:4222"
